Fix crash when adding a column with a locked layer selected

1) Select a frame on a locked layer on the timeline
2) Press "Insert column"

The crash happened because calculateSelectionMetrics() would
return an infinitly wide inverted range. Now the patch added
an argument to ignore locked layers when it is necessary and
added a validity check in KisAnimTimelineFramesView::insertKeyframes()

BUG:486893